@@ -1,5 +1,9 @@
 package mx.edu.cbta.sistemaescolar.paraescolar.controller;
 
+
+import mx.edu.cbta.sistemaescolar.paraescolar.service.exception.ParaescolarNoEncontradaException;
+import mx.edu.cbta.sistemaescolar.paraescolar.service.exception.ModificarParaescolarException;
+import mx.edu.cbta.sistemaescolar.paraescolar.service.exception.CrearParaescolarException;
 import mx.edu.cbta.sistemaescolar.paraescolar.service.ActividadParaescolarService;
 import mx.edu.cbta.sistemaescolar.paraescolar.mapper.ActividadParaescolarMapper;
 import mx.edu.cbta.sistemaescolar.paraescolar.dto.ActividadParaescolarDTO;
@@ -9,11 +13,10 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.HttpStatus;
 
-import java.util.HashMap;
-import java.util.Map;
-import java.util.stream.Collectors;
 import jakarta.validation.Valid;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/paraescolares")
@@ -32,26 +35,28 @@ public class ActividadParaescolarController {
         List<ActividadParaescolar> lista = service.obtenerParaescolares();
         List<ActividadParaescolarDTO> dtos = lista.stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
     @PostMapping
-    public ResponseEntity<ActividadParaescolarDTO> crear(@Valid @RequestBody ActividadParaescolarDTO dto) {
+    public ResponseEntity<ActividadParaescolarDTO> crear(@Valid @RequestBody ActividadParaescolarDTO dto) throws CrearParaescolarException {
         ActividadParaescolar entidad = mapper.toEntity(dto);
         ActividadParaescolar guardada = service.crearActividadParaescolar(entidad);
         return ResponseEntity.status(HttpStatus.CREATED).body(mapper.toDTO(guardada));
     }
 
     @PatchMapping("/{id}")
-    public ResponseEntity<ActividadParaescolarDTO> modificar(@PathVariable Long id, @Valid @RequestBody ActividadParaescolarDTO dto) {
+    public ResponseEntity<ActividadParaescolarDTO> modificar(@PathVariable Long id, @Valid @RequestBody ActividadParaescolarDTO dto)
+            throws ParaescolarNoEncontradaException, ModificarParaescolarException
+    {
         ActividadParaescolar entidad = mapper.toEntity(dto);
         ActividadParaescolar actualizada = service.modificarParaescolar(id, entidad);
         return ResponseEntity.ok(mapper.toDTO(actualizada));
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> eliminar(@PathVariable Long id) {
+    public ResponseEntity<?> eliminar(@PathVariable Long id) throws ParaescolarNoEncontradaException {
         service.eliminarParaescolar(id);
         Map<String, String> response = new HashMap<>();
         response.put("message", "La actividad paraescolar ha sido eliminada con éxito.");
